--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/joy": "^5.0.0-beta.11",
     "@mui/material": "^5.14.14",
     "@mui/x-data-grid": "^6.16.3",
+    "dayjs": "^1.11.10",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
