add: feature edit customer

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "git-push-own": "node ./src/scripts/gitPush.cjs"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
