--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "git-push-own": "node ./src/scripts/gitPush.cjs"
+    "git-push-own": "node ./src/scripts/gitPush.cjs",
+    "git-push-deploy-own": "node ./src/scripts/gitPushAndDeploy.cjs"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
