--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
