--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@mui/material": "^5.14.14",
     "@mui/x-data-grid": "^6.16.3",
     "@mui/x-date-pickers": "^6.18.1",
+    "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
+    "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
